[package]
name = "llmpk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
